# examen-

./: Ejercicio2:SistemadeAlquilerdeVehículos  Ejercicio2:SistemadeAlquilerdeVehículos.CPP  PUNTO.CPP  README.md  callback  callback.cpp  ejercicio1_Sistema de Carrito de Compras.cpp  excel  mejor tiempo  mejor tiempo.cpp  palindromo  palindromo.cpp  pascal  pascal.cpp  solución.cpp  twosum
final segundo corte/: CMakeLists.txt  estudiante.h  final 2 tercio.cpp  final.cpp
include/: Biblioteca.h  CMakeLists.txt  Libro.h
include/src/: Biblioteca.cpp  main.cpp
src/: biblioteca.cpp  implemtacion_sistema_carrito_compras  implemtacion_sistema_carrito_compras.cpp  main.cpp
src1/: libro.cpp
